--- a/Visualization_data.db.ipynb
+++ b/Visualization_data.db.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3b149499",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "129c635c",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "c63a58a2",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "75794505",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "      <td>user</td>\n",
        "      <td>$6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...</td>\n",
        "      <td>0</td>\n",
-       "      <td>200</td>\n",
+       "      <td>180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -185,17 +185,17 @@
       "text/plain": [
        "       0                                                  1  2    3\n",
        "0   test                                               test  0  -30\n",
-       "1   user  $6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...  0  200\n",
+       "1   user  $6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...  0  180\n",
        "2  admin  $6$rounds=656000$W9gOQ4vBBy7StHPs$HHFYVSqZf1vU...  1  200"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tablesList\n",
+    "# tablesList\n",
     "df = pd.DataFrame(results)\n",
     "df"
    ]
