--- a/Visualization_data.db.ipynb
+++ b/Visualization_data.db.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c63a58a2",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "75794505",
    "metadata": {},
    "outputs": [
@@ -178,18 +178,26 @@
        "      <td>1</td>\n",
        "      <td>200</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>saguillet2000</td>\n",
+       "      <td>$6$rounds=656000$dcRaL6zEv3Y2Z3Du$1hjBUZj4wGrg...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       0                                                  1  2    3\n",
-       "0   test                                               test  0  -30\n",
-       "1   user  $6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...  0  180\n",
-       "2  admin  $6$rounds=656000$W9gOQ4vBBy7StHPs$HHFYVSqZf1vU...  1  200"
+       "               0                                                  1  2    3\n",
+       "0           test                                               test  0  -30\n",
+       "1           user  $6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...  0  180\n",
+       "2          admin  $6$rounds=656000$W9gOQ4vBBy7StHPs$HHFYVSqZf1vU...  1  200\n",
+       "3  saguillet2000  $6$rounds=656000$dcRaL6zEv3Y2Z3Du$1hjBUZj4wGrg...  0  200"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
