Place in show backend works

--- a/Visualization_data.db.ipynb
+++ b/Visualization_data.db.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "512a0650",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "'\\ntablesList = []\\n\\nfor tableName in table_names:\\n    print(tableName)\\n    table = meta.tables[tableName]\\n    query = select([table])\\n    results = connection.execute(query)\\n    tablesList.append(results)\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,12 +90,13 @@
     "    query = select([table])\n",
     "    results = connection.execute(query)\n",
     "    tablesList.append(results)\n",
-    "'''"
+    "'''\n",
+    "#children = session.query('Accounts').filter('Child'.any(Parent.id==??))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "129c635c",
    "metadata": {},
    "outputs": [
@@ -114,18 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "c63a58a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = engine.execute('SELECT * FROM '\n",
-    "                        '\"accounts\"')"
+    "                        '\"places\"')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "75794505",
    "metadata": {},
    "outputs": [
@@ -154,50 +155,82 @@
        "      <th>1</th>\n",
        "      <th>2</th>\n",
        "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>test</td>\n",
-       "      <td>test</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Puerta del Sol</td>\n",
+       "      <td>MADRID</td>\n",
+       "      <td>SPAIN</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>user</td>\n",
-       "      <td>$6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>La Mina</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>Catalunya</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>admin</td>\n",
-       "      <td>$6$rounds=656000$W9gOQ4vBBy7StHPs$HHFYVSqZf1vU...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>200</td>\n",
+       "      <td>3</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>a</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>saguillet2000</td>\n",
-       "      <td>$6$rounds=656000$dcRaL6zEv3Y2Z3Du$1hjBUZj4wGrg...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>200</td>\n",
+       "      <td>4</td>\n",
+       "      <td>show</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>España</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>j</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>España</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>s</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>España</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>z</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>España</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               0                                                  1  2    3\n",
-       "0           test                                               test  0  -30\n",
-       "1           user  $6$rounds=656000$bJBrZxaCmABxrtUL$EYYSdAqyUv/h...  0  180\n",
-       "2          admin  $6$rounds=656000$W9gOQ4vBBy7StHPs$HHFYVSqZf1vU...  1  200\n",
-       "3  saguillet2000  $6$rounds=656000$dcRaL6zEv3Y2Z3Du$1hjBUZj4wGrg...  0  200"
+       "   0               1          2          3   4\n",
+       "0  1  Puerta del Sol     MADRID      SPAIN  44\n",
+       "1  2         La Mina  Barcelona  Catalunya  23\n",
+       "2  3               a          a          a   3\n",
+       "3  4            show  Barcelona     España  11\n",
+       "4  5               j  Barcelona     España  12\n",
+       "5  6               s  Barcelona     España  11\n",
+       "6  7               z  Barcelona     España  11"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
